--- a/bin/samp.org
+++ b/bin/samp.org
@@ -4,6 +4,12 @@ Neque amet architecto occaecati delectus sint qui aut. Beatae vel
 omnis quis voluptas aperiam facere ea. Unde ratione molestiae
 necessitatibus nisi voluptatem.
 
+=rplacd #!false=
+
+~rplacd #!false=
+
+=set! \= assignment=
+
 ** header
 
 Sed eum quas ad. Qui praesentium et dolorem inventore nam rerum.
