--- a/bin/samp.org
+++ b/bin/samp.org
@@ -6,9 +6,11 @@ necessitatibus nisi voluptatem.
 
 =rplacd #!false=
 
-~rplacd #!false=
+~rplacd #!false~
 
 =set! \= assignment=
+
+~set! \~ assignment~
 
 ** header
 
